--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
-body{
+body, html{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    min-height: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 form{
